@@ -26,6 +26,19 @@
 
 # Enable automatic installation of what's built.
 KBUILD_DO_AUTO_INSTALL := 1
+
+
+#
+# The kBuild version.
+#
+KBUILD_VERSION_MAJOR = 0
+KBUILD_VERSION_MINOR = 1
+KBUILD_VERSION_PATCH = 0
+KBUILD_VERSION = "0.1.0"
+DEFS += \
+	KBUILD_VERSION_MAJOR=$(KBUILD_VERSION_MAJOR) \
+	KBUILD_VERSION_MINOR=$(KBUILD_VERSION_MINOR) \
+	KBUILD_VERSION_PATCH=$(KBUILD_VERSION_PATCH)
 					
 #
 # Template for building commandline tools.
